--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<html><head></head><body></body></html>
+<html><head>
+<titel>曙光國中</titel>
+<style>
+				p{
+				line-height:70%;
+}
+</style>
+</head><body>
+<script language="javascript"> 
+   alert("歡迎蒞臨曙光女中附設國中部")
+   alert(
+   </script> 
+</body></html>
