--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head><body>
 <script language="javascript"> 
    alert("歡迎蒞臨曙光女中附設國中部")
-   alert(
+   alert("請大力宣傳")
+   alert("優質力，世界心")
    </script> 
 </body></html>
