--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </style>
 </head><body>
 <p>本校特色</p>
-<p>本校有優質的環境與師資，最重的課業</p>
+<p>本校有優質的環境與師資，最重的課業與專制的校規和最時尚的校長</p>
 <script language="javascript"> 
    alert("歡迎蒞臨曙光女中附設國中部")
    alert("請大力宣傳")
