--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </style>
 </head><body>
 <h1>曙光國中</h1>
-<p>本校特色</p>
+<p><h3>本校特色</h3></p>
 <p>本校有優質的環境與師資，最重的課業與專制的校規和最時尚的校長</p>
 <p><h3>Q&A</h3></p>
 <p></p>
