--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
 </style>
 </head><body>
 <h1>曙光國中</h1>
+<br><input type="button" value="聯絡我們" onclick="location.href='要前往的網頁連結'"><input type="button" value="贊助" onclick="alert('願意給工程猴猴一份pizza?點選聯絡我們')"></br>
 <p><h3>本校特色</h3></p>
 <p>本校有優質的環境與師資，最重的課業與專制的校規和最時尚的校長</p>
 <p><h3>Q&A</h3></p>
+<p>1.為何各班學費不同?</p>
+<p>要強制培養各班不同人才，需要強制在周六逼實驗班的學生到校聽該班之班名之課程</p>
+<p>2.常常看到一群人在操場跳奇怪老人舞，是什麼？</p>
+<p>是本校最引以為傲的快樂操，動作獨特，國一要佔用一半的體育課來練習，民怨四起</p>
+<p>3.校長頭髮為何如此時尚?</p>
+<p>請洽本校對面亞提斯理髮店</p>
+<p>4.為何存在髮禁?</p>
+<p>維持"優良傳統"</p>
+<p>5.為何大禮堂禁止帶水又要待那麼久不開冷氣?</p>
+<p>尊重天主</p>
+<p>6.調班是否造成惡性競爭</p>
+<p>是的，班級間也會產生刻板印象與歧視</p>
+<p></p>
 <p></p>
 <script language="javascript"> 
    alert("歡迎蒞臨曙光女中附設國中部")
