--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </style>
 </head><body>
 <h1>曙光國中</h1>
-<br><input type="button" value="聯絡我們" onclick="location.href='要前往的網頁連結'"><input type="button" value="贊助" onclick="alert('願意給工程猴猴一份pizza?點選聯絡我們')"></br>
+<br><input type="button"style="width:120px;height:40px;background-color:blue;color:white " value="聯絡我們" onclick="location.href='要前往的網頁連結'"><input type="button"style="width:120px;height:40px;background-color:blue;color:white "  value="贊助" onclick="alert('願意給工程猴猴一份pizza?點選聯絡我們')"></br>
 <p><h3>本校特色</h3></p>
 <p>本校有優質的環境與師資，最重的課業與專制的校規和最時尚的校長</p>
 <p><h3>Q&A</h3></p>
