--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <p>尊重天主</p>
 <p>6.調班是否造成惡性競爭</p>
 <p>是的，班級間也會產生刻板印象與歧視</p>
-<p></p>
-<p></p>
+<p>7.為何本校要有九節課，且同學們皆會上課</p>
+<p>不，這不是強制，只是不想上課的就轉學吧!這一塊學校會施壓</p>
 <script language="javascript"> 
    alert("歡迎蒞臨曙光女中附設國中部")
    alert("請大力宣傳")
