--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head><body>
 <h1><img src="https://storage.googleapis.com/school-parenting-com-tw/school/uploads/badges/983aeead66418722df034a18cbee95f4dd3bbf9e.jpeg">曙光國中</h1>
 <br><input type="button"style="width:120px;height:40px;background-color:blue;color:white " value="聯絡我們" onclick="alert("由於留言板遭到駭客攻擊\n暫時不開放")"><input type="button"style="width:120px;height:40px;background-color:blue;color:white "  value="贊助" onclick="alert('願意給工程猴猴一份pizza?點選聯絡我們')"></br>
-<p><a href="https://message-board-v1.herokuapp.com/">被攻擊的留言板</a></p>
+<p><a >被攻擊的留言板</a></p>
 <p><h3>本校特色</h3></p>
 <p>本校有優質的環境與師資，最重的課業與專制的校規和最時尚的校長</p>
 <p><h3>Q&A</h3></p>
