--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 }
 </style>
 	<script src='//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'></script>
+<meta name="google-site-verification" content="ShvAUHTptRPr2TIWkGy9dOanEYCpgnh1gkl-y0BAgw8" />
 </head><body>
 <h1><img src="https://storage.googleapis.com/school-parenting-com-tw/school/uploads/badges/983aeead66418722df034a18cbee95f4dd3bbf9e.jpeg">曙光國中</h1>
 <br><input type="button"style="width:120px;height:40px;background-color:blue;color:white " value="聯絡我們" onclick="alert("由於留言板遭到駭客攻擊\n暫時不開放")"><input type="button"style="width:120px;height:40px;background-color:blue;color:white "  value="贊助" onclick="alert('願意給工程猴猴一份pizza?點選聯絡我們')"></br>
