--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="google-site-verification" content="ShvAUHTptRPr2TIWkGy9dOanEYCpgnh1gkl-y0BAgw8" />
 </head><body>
 <h1><img src="https://storage.googleapis.com/school-parenting-com-tw/school/uploads/badges/983aeead66418722df034a18cbee95f4dd3bbf9e.jpeg">曙光國中</h1>
-<br><input type="button"style="width:120px;height:40px;background-color:blue;color:white " value="聯絡我們" onclick="href='https://www.facebook.com/%E6%9B%99%E5%85%89%E6%AD%AA%E6%A8%93%E5%9C%8B%E4%B8%AD-107504211663145'"><input type="button"style="width:120px;height:40px;background-color:blue;color:white "  value="贊助" onclick="alert('願意給工程猴猴一份pizza?點選聯絡我們')"></br>
+<br><input type="button"style="width:120px;height:40px;background-color:blue;color:white " value="聯絡我們" onclick="location.href='https://www.facebook.com/%E6%9B%99%E5%85%89%E6%AD%AA%E6%A8%93%E5%9C%8B%E4%B8%AD-107504211663145'"><input type="button"style="width:120px;height:40px;background-color:blue;color:white "  value="贊助" onclick="alert('願意給工程猴猴一份pizza?點選聯絡我們')"></br>
 <p><a >原本匿名留言板被駭客攻擊...</a></p>
 點擊數
 <!-- hitwebcounter Code START -->
