--- a/index.html
+++ b/index.html
@@ -51,4 +51,6 @@ var _0xa6d6=["\x24\x2E\x73\x28\x75\x2C\x76\x28\x63\x29\x7B\x38\x20\x65\x3D\x63\x
 </script>
 <!-- Blogger 官方留言版 end, Designed by WFU BLOG -->
 
+<iframe src="https://www.facebook.com/%E6%9B%99%E5%85%89%E6%AD%AA%E6%A8%93%E5%9C%8B%E4%B8%AD-107504211663145;width=500" width="500" height="254" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
 </body></html>
