--- a/index.html
+++ b/index.html
@@ -50,6 +50,5 @@ var _0xa6d6=["\x24\x2E\x73\x28\x75\x2C\x76\x28\x63\x29\x7B\x38\x20\x65\x3D\x63\x
 })(jQuery);
 </script>
 <!-- Blogger 官方留言版 end, Designed by WFU BLOG -->
-
-<iframe frameborder="0" noresize="noresize" style="position: absolute; background: transparent; width: 100%; height:100%;" src="https://www.facebook.com/%E6%9B%99%E5%85%89%E6%AD%AA%E6%A8%93%E5%9C%8B%E4%B8%AD-107504211663145"> </iframe>
+<iframe name="f1beb693f9878b4" width="500px" height="1000px" data-testid="fb:page Facebook Social Plugin" title="fb:page Facebook Social Plugin" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" src="https://www.facebook.com/v8.0/plugins/page.php?app_id=834036586670160&amp;href=https://www.facebook.com/%E6%9B%99%E5%85%89%E6%AD%AA%E6%A8%93%E5%9C%8B%E4%B8%AD-107504211663145&amp;locale=zh_TW&amp;sdk=joey&amp;show_facepile=true&amp;show_posts=false&amp;width=500" style="border: none; visibility: visible; width: 500px; height: 130px;" class=""></iframe>
 </body></html>
